# RTNeural-Variant

./: .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
installers/mac/: Intro.txt  RTNeuralVariant.pkgproj  build_mac_installer.sh
installers/windows/: RTNeuralVariant_Install_Script.iss  build_win_installer.sh
models/: GRU_16_1.json  GRU_16_2.json  GRU_32_1.json  GRU_32_2.json  GRU_8_1.json  GRU_8_2.json  LSTM_16_1.json  LSTM_16_2.json  LSTM_32_1.json  LSTM_32_2.json  LSTM_8_1.json  LSTM_8_2.json
modules/: CMakeLists.txt
python/: generate_variant_hpp.py  model.py
scripts/: mac_builds.sh  validate.sh  win_builds.sh
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  RTNeuralVariant.cpp  RTNeuralVariant.h  model_variant.hpp  pch.h
